--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -5,6 +5,21 @@
     font-family: -apple-system, "SF UI Text", "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Zen Hei", sans-serif;
     /*font-family: "Microsoft YaHe";*/
   }
+  a{
+    text-decoration: none;
+  }
+  a:link{
+    text-decoration:none;
+  }
+  a:visited{
+    text-decoration:none;
+  }
+  a:hover{
+    text-decoration:none;
+  }
+  a:active{
+    text-decoration:none;
+  }
   html,body{
     width: 100%;
     height: 100%;
