--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -165,12 +165,13 @@
     font-size: 16px;
   }
   .news{
-    width: 305px;
+    width: 1200px;
     height: 330px;
     font-size: 14px;
   }
   .hotLabelList, .newsList {
     position: absolute;
+    overflow: hidden;
     top:0;
     left: 0;    
     padding:50px 10px 10px 10px;
@@ -185,18 +186,93 @@
     background-color: #ebf3ff;
     color: #157aff;
   }
-  .newsList{
-    padding:50px 20px 10px;
-  }
-  .news_li{
-    padding: 0 10px;
-    height: 36px;
-    line-height: 36px;
-    box-sizing: border-box;
-    background:url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/newsico.png) no-repeat left center;
-    text-indent: 5px;
-    border-bottom: 1px dashed #ebebeb;
-  }
+ /* 新闻资讯*/
+  .newsList {
+		/*padding: 50px 20px 10px 20px;*/
+	}
+	.news_li:nth-child(odd){
+		padding-left: 10px;
+		padding-right: 10px;
+		
+	}
+	.news_li:nth-child(even){
+		padding-right: 10px;
+		padding-left: 10px;
+	}
+	.news_li {
+		/*padding: 0 10px;*/
+		height: 36px;
+		line-height: 36px;
+		box-sizing: border-box;
+		min-width: 330px;
+		width: 50%;
+		height: 83px;
+		float: left;
+		padding-top: 15px;
+		background: #fff;
+		display:-moz-box; /* Firefox */
+		display:-webkit-box; /* Safari and Chrome */
+		display:box;
+		/*background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/newsico.png) no-repeat left center;
+		text-indent: 5px;
+		border-bottom: 1px dashed #ebebeb;*/
+	}
+	.news_li .news_li_left{
+		width: 115px;
+		height: 68px;
+		margin-right: 10px;
+		/*-moz-box-flex:1.0; 
+		-webkit-box-flex:1.0; 
+		box-flex:1.0;*/
+	}
+	.news_li .news_li_left img{
+		width: 100%;
+		height: 100%;
+	}
+	.news_li .news_li_right{
+    -moz-box-flex:2.0; /* Firefox */
+		-webkit-box-flex:2.0; /* Safari and Chrome */
+		box-flex:2.0;
+	}
+	.news_li .news_li_right h3{
+		display: block;
+	    width: 100%;
+	    font-size: 16px;
+	    color: #333f5f;
+	    height: 20px;
+	    font-weight: 500;
+	    line-height: 20px;
+	}
+	.news_li .news_li_right h3 span.news_title{
+		text-align: left;
+		display: block;
+		min-width: 100px;
+		width: 60%;
+		font-size: 16px;
+		float: left;
+		white-space:nowrap;
+		overflow:hidden;
+		text-overflow:ellipsis;
+	}
+	.news_li .news_li_right h3 span.times{
+		text-align: right;
+		display: block;
+		min-width: 74px;
+		width: 20%;
+		float: right;
+		font-size: 14px;
+	}
+	.news_li .news_li_right .news_cont{
+		display: block;
+		width: 100%;
+		margin-top: 5px;
+		line-height: 18px;
+		font-size: 13px;
+		color: #999999;
+		word-break: break-all;
+		height: 36px;
+    overflow: hidden;
+	}
 /*-------------enlist-----------------*/
   .enlist, .dynamics{
     width: 305px;
