--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -186,6 +186,52 @@
     background-color: #ebf3ff;
     color: #157aff;
   }
+  .course{
+    width: 260px;
+    height: 220px;
+  }
+  .course .imgbox {
+    padding: 10px;
+    height: 140px;
+  }
+  .course .imgbox img{
+    width: 100%;
+    height: 100%;
+  }
+  .course .courseTit{
+    padding: 0 10px;
+    height: 16px;
+    line-height: 16px;
+    font-size: 15px;
+    color: #333;
+    overflow: hidden;
+  }
+  .course .speak, .course .number, .course .popularity{
+    float: left;
+    margin-top: 12px;
+    padding-left:10px;
+    width: 120px;
+    font-size: 13px;
+    line-height: 14px;
+    height: 14px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #999999;
+  }
+  .course .number{
+    padding-left: 0;
+    width: 60px;
+    text-indent: 20px;
+    background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/rqsl1.png) no-repeat left center;
+  }
+  .course .popularity{
+    padding-left: 0;
+    width: 60px;
+    text-indent: 20px;
+    background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/rqsl1.png) no-repeat -72px center
+  }
+  /* todo */
 /* 新闻资讯*/
   .newsList {
     /*padding: 50px 20px 10px 20px;*/
