--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -1272,3 +1272,321 @@
 	.courseclassification ul.theme_16 .second_mune_ul a.nav-third_line{color:#666}
 	.courseclassification ul.theme_16 .second_mune_ul div.fosnte a{color:#ffb1cf !important;}
 	.courseclassification ul.theme_16 .second_mune_ul div.fosnte a:hover{color:#ffb1cf !important;}
+	
+  /*用户登录*/
+  .login{
+  	width: 285px;
+  	height: 210px;
+  }
+  .login *{
+  	font-family: 微软雅黑;
+  }
+  .login input,
+	.login textarea:focus {
+		outline: none;
+		background: none;
+		word-break: normal;
+		word-wrap: break-word;
+	}
+	.login .denser {
+		padding: 0 20px 20px 20px;
+		float: left;
+		width: 245px;
+	}
+	.login .chorejrxtxtarea {
+		height: 40px;
+		line-height: 40px;
+		width: 205px;
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-userico.png) no-repeat #f5f7fa 12px center;
+		padding-left: 40px;
+		color: #666;
+		font-size: 14px;
+		margin-top: 20px;
+	}
+	
+	.login .chorejrxtxtpass {
+		height: 40px;
+		line-height: 40px;
+		width: 205px;
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-passico.png) no-repeat #f5f7fa 12px center;
+		padding-left: 40px;
+		color: #666;
+		font-size: 14px;
+		margin-top: 20px;
+		position: relative;
+	}
+	
+	.login .dhsure {
+		margin: 12px 0;
+	}
+	
+	.login .signbtn {
+		background: #338bff;
+		border: medium none;
+		border-radius: 4px;
+		cursor: pointer;
+		height: 45px;
+		line-height: 45px;
+		width: 245px;
+		color: #fff;
+		font-size: 16px;
+		margin-top: 25px;
+	}
+	
+	.login .txtarea {
+		height: 40px;
+		line-height: 40px;
+		width: 205px;
+		border: none;
+	}
+	
+	.login .txtpass {
+		height: 40px;
+		line-height: 40px;
+		width: 170px;
+		border: none;
+		float: left;
+    
+	}
+	
+	.login .rybtnat {
+		font-size: 14px;
+		color: #999;
+	}
+	
+	.login .derase {
+		float: right;
+		color: #338bff;
+		font-size: 13px;
+	}
+	
+	.login .derase a {
+		color: #338bff;
+	}
+	
+	.login .aerire {
+		margin-top: 18px;
+		height: 18px;
+		line-height: 18px;
+		font-size: 13px;
+		color: #999;
+	}
+	
+	.login .fl {
+		float: left;
+		display: inline;
+	}
+	
+	
+	.login .invisible {
+	  display: block;
+	  background: url(icon/closeeye_icon.png) center center no-repeat;
+	  height:40px;
+	  width: 35px;
+	  float: left;
+	  background-size: 30px;
+	  position: absolute;
+		right: 5px;
+	}
+	.login .visible {
+    display: block;
+    background: url(icon/openeys-icon.png) center center no-repeat;
+	  height: 40px;
+	  width: 35px;
+	  float: left;
+	  background-size: 30px;
+	  position: absolute;
+		right: 5px;
+	}
+	.login input:-webkit-autofill {
+		-webkit-box-shadow: 0 0 0px 1000px #f5f7fa inset;
+		
+	}
+	
+	/*登录框样式1*/
+	#logintype1{
+		background: #338bff;
+		width: 285px;
+	}
+	#logintype1 .chorejrxtxtarea{
+		background: none;
+		padding: 0;
+		width: 285px;				
+	}
+	#logintype1 .chorejrxtxtpass{
+		background: none;
+		padding: 0;
+		width: 285px;
+		position: relative;
+	}
+	#logintype1 .chorejrxtxtarea span,#logintype1 .chorejrxtxtpass span{
+		color: #fff;
+	    color: rgb(255, 255, 255);
+	    font-size: 25px;
+	    font-family: 微软雅黑;
+	    line-height: 39px;
+	    float: left;
+	}
+	#logintype1 .txtarea,#logintype1 .txtpass{
+		background: #fff;
+		border-radius: 3px;
+	    width: 220px;
+	    height: 34px;
+	    line-height: 34px;
+	    border: none;
+	    padding-left: 5px;
+	    margin-left: 5px;
+	}
+	#logintype1 .signbtn {
+	    width: 285px;
+	    background: url(http://static.ebanhui.com/ebh/tpl/2016/images/lijidenglu.png?v=01) center center no-repeat;
+	}
+	
+	/*第三方登录*/
+	.thirdlogin{
+		width: 248px;
+		height: 30px;
+	}
+	.thirdlogin .fl{
+		float: left;
+		display: inline;
+	}
+	.thirdlogin .aerire {
+		height: 30px;
+		line-height: 30px;
+		font-size: 13px;
+		color: #999;
+	}
+	.thirdlogin a.md-qq {
+		float: left;
+		margin: 7px 8px;
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-qq1.png) no-repeat;
+		display: block;
+		width: 14px;
+		height: 16px;
+	}
+	
+	.thirdlogin a.md-qq:hover {
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-qq2.png) no-repeat;
+	}
+	
+	.thirdlogin a.md-sina {
+		float: left;
+		margin: 8px 10px;
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-sina1.png) no-repeat;
+		display: block;
+		width: 16px;
+		height: 15px;
+	}
+	
+	.thirdlogin a.md-sina:hover {
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-sina2.png) no-repeat;
+	}
+	
+	.thirdlogin a.md-weixin {
+		float: left;
+		margin: 8px 10px;
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-weixin1.png) no-repeat;
+		display: block;
+		width: 18px;
+		height: 14px;
+	}
+	
+	.thirdlogin a.md-weixin:hover {
+		background: url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/md-weixin2.png) no-repeat;
+	}
+	.thirdlogin .aerire span{
+		margin-left: 20px;
+	}
+	.userregistration a,
+	.forgotpassword a,
+	.sethomepage a,
+	.collection a{
+		color: #338bff;
+		font-size: 13px;
+	}
+	.userregistration a:hover,
+	.forgotpassword a:hover,
+	.sethomepage a:hover,
+	.collection a:hover{
+		text-decoration: none;
+	}
+	/*名师团队*/
+	.theteacherteam{
+		width: 247px;
+		height: 228px
+	}
+	.theteacherteam .addtheteateam{
+		width: 247px;
+		height: 100%;
+	}
+	.theteacherteam .addtea-icon{
+		width: 247px;
+		height: 100%;
+		background: url(icon/addtea.png) center center no-repeat;
+	}
+	.theteacherteam .addtheteateam .team_bk {
+    width: 247px;
+    height: 100%;
+    transition: all 0.45s ease-out 0s;
+    position: relative;
+	}
+	.theteacherteam .addtheteateam  .team_mask {
+		display: none;
+	}
+	.theteacherteam .addtheteateam  .team_bk:hover .team_mask {
+		background: #8493af none repeat scroll 0 0;
+		opacity: 0.9;
+		display:block;
+		color:#fff;
+		width:100%;
+		box-shadow: 0 0 15px #ccc;
+		height:100%;
+		position: absolute;
+		padding: 20px;
+		box-sizing:border-box;
+		-moz-box-sizing:border-box; /* Firefox */
+		-webkit-box-sizing:border-box; /* Safari */
+		top:0px;
+		left:0px;
+		line-height:1.8;
+		text-decoration: none;
+		
+	}
+	.theteacherteam .addtheteateam  .team_hbj {
+	    height:170px;
+	    width:100%;
+	}
+	.theteacherteam .addtheteateam  .team_hbj img {
+		border-radius:100%;
+		margin:10px 0 10px 75px;
+		width:98px;
+		height:98px;
+	}
+	.theteacherteam .addtheteateam  .team_h3 {
+		font-size:15px;
+		text-align:center;
+		width:100%;
+		overflow:hidden;
+		color:#333
+	}
+	.theteacherteam .addtheteateam  .team_p1 {
+		color:#999;
+		text-align:center;
+		width:100%;
+		overflow:hidden;
+		font-size:13px;
+		margin-top:5px;
+	}
+	.theteacherteam .addtheteateam  .team_p2 {
+		line-height:1.8;
+		text-align:left;
+		margin-top:5px;
+		padding: 0 5px;
+		box-sizing:border-box;
+		-moz-box-sizing:border-box; /* Firefox */
+		-webkit-box-sizing:border-box; /* Safari */
+		width:100%;
+		color:#999;
+		font-size:13px;
+	}
