--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -582,10 +582,9 @@
 /*-----------课程分类---------------*/
 	.addcoursetype{
 		width:200px;
-		height:217px;
+    height: 50px;
 	}
 	.courseclassification{
-		
 		width:100%;
 		height:100%;
 		position:relative;
@@ -636,7 +635,7 @@
 		width: 100%;
 	}
 	#app .courseclassification .second_mune_ul{
-		display: block;
+		display: none;
 	}
 	.courseclassification .second_mune_ul li {
 		list-style: none;
