--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -1,3 +1,28 @@
+  .content{
+    margin: 0 auto;
+    width: 1200px;
+    height: 1800px;
+    background-color: #fff;
+  }
+  .head, .middle, .foot{
+    position: relative;
+  }
+  .module:hover{
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);   
+  }
+  .promptBox{
+    display: none;
+    position: absolute;
+    top: -20px;
+    left: 0;
+    height: 20px;
+    line-height: 20px;
+    padding:0 10px;
+    background-color: rgba(245,93,84,0.9);
+    color: #fff;
+    cursor: pointer;
+    font-size: 12px;
+  }
 /* module */
   .module{
     position: absolute;
