--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,5 +1,6 @@
 /* common */
   *{
+    font-size: 12px;
     margin:0;
     padding:0;
     font-family: -apple-system, "SF UI Text", "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Zen Hei", sans-serif;
@@ -62,4 +63,7 @@
   }
   input{
     outline: 0;
+  }
+  li{
+    list-style-type: none;
   }
