--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -175,6 +175,7 @@
     padding:50px 10px 20px 12px;
     overflow: hidden;
     box-sizing: border-box;
+    font-size: inherit;
   }
   #badge{
     float: left;
@@ -1666,45 +1667,108 @@
 		-webkit-box-shadow: 0 0 0px 1000px #f5f7fa inset;
 		
 	}
+  .denser .risfgr {
+      border: 1px solid #cdcdcd;
+      float: left;
+      height: 100px;
+      margin-top: 35px;
+      margin-bottom: 25px;
+      width: 100px;
+      border-radius: 50px;
+  }
+  .denser .erseasd {
+    float: left;
+    margin-left: 15px;
+  }
+  .denser .waisrd {
+      margin-top: 40px;
+      font-size: 16px;
+      margin-bottom: 10px;
+  }
+  .denser .mdistr {
+      font-size: 13px;
+      line-height: 2;
+  }
+
+  .denser .flosret {
+      float: left;
+      width: 245px;
+      border-top: solid 1px #f2f2f2;
+      text-align: center;
+      height: 32px;
+      line-height: 32px;
+      margin-top: 24px;
+  }
+  .denser .flosret a {
+      font-size: 13px;
+      color: #888;
+  }
 	
 	/*登录框样式1*/
-	#logintype1{
-		background: #338bff;
-		width: 285px;
-	}
-	#logintype1 .chorejrxtxtarea{
-		background: none;
-		padding: 0;
-		width: 285px;				
-	}
-	#logintype1 .chorejrxtxtpass{
-		background: none;
-		padding: 0;
-		width: 285px;
-		position: relative;
-	}
-	#logintype1 .chorejrxtxtarea span,#logintype1 .chorejrxtxtpass span{
-		color: #fff;
-	    color: rgb(255, 255, 255);
-	    font-size: 25px;
-	    font-family: 微软雅黑;
-	    line-height: 39px;
-	    float: left;
-	}
-	#logintype1 .txtarea,#logintype1 .txtpass{
-		background: #fff;
-		border-radius: 3px;
-	    width: 220px;
-	    height: 34px;
-	    line-height: 34px;
-	    border: none;
-	    padding-left: 5px;
-	    margin-left: 5px;
-	}
-	#logintype1 .signbtn {
-	    width: 285px;
-	    background: url(http://static.ebanhui.com/ebh/tpl/2016/images/lijidenglu.png?v=01) center center no-repeat;
-	}
+	  #logintype1{
+    background: #338bff;
+    width: 292px;
+    color: #fff;
+  }
+  #logintype1 .chorejrxtxtarea{
+    background: none;
+    padding: 0;
+    width: 285px;       
+  }
+  #logintype1 .chorejrxtxtpass{
+    background: none;
+    padding: 0;
+    width: 285px;
+    position: relative;
+  }
+  #logintype1 .chorejrxtxtarea span,#logintype1 .chorejrxtxtpass span{
+    color: #fff;
+      color: rgb(255, 255, 255);
+      font-size: 25px;
+      font-family: 微软雅黑;
+      line-height: 39px;
+      float: left;
+  }
+  #logintype1 .txtarea,#logintype1 .txtpass{
+    background: #fff;
+    border-radius: 3px;
+      width: 220px;
+      height: 34px;
+      line-height: 34px;
+      border: none;
+      padding-left: 5px;
+      margin-left: 5px;
+  }
+  #logintype1 .signbtn {
+      width: 285px;
+      background: url(http://static.ebanhui.com/ebh/tpl/2016/images/lijidenglu.png?v=01) center center no-repeat;
+  }
+  #logintype1 .tuichu {
+    width: 120px;
+    float: left;
+    display: block;
+    height: 64px;
+    text-align: center;
+    line-height: 55px;
+    color: rgb(0, 111, 173);
+    font-size: 20px;
+    font-family: 微软雅黑;
+    margin: 25px auto 0px;
+    background: url(http://static.ebanhui.com/ebh/tpl/2016/images/tuichu.png?v=01) center center no-repeat;
+  }
+  #logintype1 .masjr {
+    width: 183px;
+    float: left;
+    display: block;
+    height: 64px;
+    text-align: center;
+    line-height: 55px;
+    color: rgb(0, 111, 173);
+    font-size: 20px;
+    font-family: 微软雅黑;
+    margin: 25px auto 0px -12px;
+    background: url(http://static.ebanhui.com/ebh/tpl/2016/images/mashangjinru.png?v=01) center center no-repeat;
+  }
 	
 	/*第三方登录*/
 	.thirdlogin{
@@ -1901,3 +1965,4 @@
 		background:url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/ico.png?v=01) no-repeat 0 -85px;
 		margin-top:21px;
 	}
+
