--- a/src/assets/module2.css
+++ b/src/assets/module2.css
@@ -6,11 +6,10 @@
   }
   .head, .middle, .foot{
     position: relative;
-    overflow: hidden;
   }
-  /*.module:hover{
+  .module:hover{
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);   
-  }*/
+  }
   .promptBox{
     display: none;
     position: absolute;
@@ -38,7 +37,7 @@
     position: absolute;
     /*background-color: #fff;*/
     z-index: 49;
-    box-sizing: border-box;
+    
   }
   #app .module{
     overflow: visible;
@@ -67,17 +66,12 @@
   }
   .text a{
     font-size: inherit;
-    width: 100%;
-    height: 100%;
-    display: block;
-    overflow: hidden;
-    color: inherit;
   }
   .editor{
     box-sizing: border-box;
     padding: 8px;
     width: 400px;
-    height: 200px;
+    height: 400px;
     word-break:break-all;
     word-wrap:break-word;
   }
@@ -105,7 +99,7 @@
   }
   .navigation {
     width: 100%;
-    height:auto!important; 
+    height:50px; 
   }
   .navigation a{
     line-height: 50px;
@@ -556,7 +550,6 @@
     color: #fff;
     background-color: rgba(0,0,0,0.5);
     cursor: pointer;
-    overflow: hidden;
   }
   .audition:hover .audiTit {
     display: block;
@@ -1945,7 +1938,6 @@
 		left:0px;
 		line-height:1.8;
 		text-decoration: none;
-    overflow: hidden;
 		
 	}
 	.theteacherteam .addtheteateam  .team_hbj {
@@ -1978,7 +1970,6 @@
 	}
 	.theteacherteam .addtheteateam  .team_p2 {
 		line-height:1.8;
-    height: 44px;
 		text-align:left;
 		margin-top:5px;
 		padding: 0 5px;
@@ -1999,7 +1990,7 @@
 	.contactway{
 		height: 122px;
 		width: 340px;
-		/*background: #8493af;*/
+		background: #8493af;
 		color: #fff;
 	}
 	.contactwaycont{
@@ -2010,7 +2001,6 @@
 		-moz-box-sizing:border-box; /* Firefox */
 		-webkit-box-sizing:border-box; /* Safari */
 		font-size:14px;
-    color: #333;
 		
 	}
 	.contactway .address{
@@ -2030,12 +2020,4 @@
 		background:url(http://static.ebanhui.com/ebh/tpl/newschoolindex/images/ico.png?v=01) no-repeat 0 -85px;
 		margin-top:21px;
 	}
-  .navigation .wrap_login a{
-    margin:0;
-  }
-  .editor .editorCon {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
 
