--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -47,12 +47,14 @@
     width: 200px;
     height: 50px;
     box-sizing: border-box;
+    border: 1px solid #ccc;
   }
   .radius {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     box-sizing: border-box;
+    border: 1px solid #ccc;
   }
   .text{
     width: 200px;
@@ -80,6 +82,7 @@
     height: 200px;
     word-break:break-all;
     word-wrap:break-word;
+    border:1px solid #ccc;
   }
   .editor p {
     margin:5px 0;
