--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -49,6 +49,11 @@
     box-sizing: border-box;
     border: 1px solid #ccc;
   }
+  .rectangle a,.radius a{
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
   .radius {
     width: 100px;
     height: 100px;
