--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -704,8 +704,8 @@
   }
 /*-------------picture-----------------*/
   .picture {
-    width: 200px;
-    height: 120px;  
+    width: 243px;
+    height: 144px;  
   }
   .picBox{
     display: block;
@@ -713,10 +713,10 @@
     height: 100%;
     overflow: hidden;
   }
-  .picture img{
+/*  .picture img{ 禁止了图片拉伸
     width: 100%;
     height: 100%;
-  }
+  }*/
 /*-------------button-----------------*/
   .button{
     width: 80px;
@@ -740,13 +740,17 @@
 /*-------------line-----------------*/
   .hline{
     width: 200px;
-    height: 1px;
+    min-height: 1px;
     background: #333;
+    border-top: 5px solid transparent!important; 
+    border-bottom: 5px solid transparent!important;
   }
   .sline{
-    width: 1px;
+    min-width: 1px;
     height: 200px;
     background: #333;
+    border-left: 5px solid transparent!important; 
+    border-right: 5px solid transparent!important;
   }
 /*-----------课程分类---------------*/
 	.addcoursetype{
