--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -713,10 +713,9 @@
     height: 100%;
     overflow: hidden;
   }
-/*  .picture img{ 禁止了图片拉伸
-    width: 100%;
-    height: 100%;
-  }*/
+  .picture img{
+    min-height: 100%;   
+  }
 /*-------------button-----------------*/
   .button{
     width: 80px;
@@ -736,21 +735,57 @@
     font-size: inherit;
     line-height: inherit;
     overflow: hidden;
+    color: inherit;
   }
 /*-------------line-----------------*/
   .hline{
-    width: 200px;
-    min-height: 1px;
-    background: #333;
-    border-top: 5px solid transparent!important; 
-    border-bottom: 5px solid transparent!important;
+    width: 200px;  
+    max-height: 0px;
+    height: 0!important;   
+    border: 0;
+    border-top-width: 1px;
+    border-left-width: 0px!important;
+    border-right-width: 0px!important;
+    border-bottom-width: 0px!important;
+    border-style: solid;
+    border-color: #333;    
+  }
+  .hline .resizeBox{
+    padding: 5px 0;
+    margin-top: -6px;
+    box-sizing: content-box;
+  }
+  .hline .resize{
+    display: none;
+  }
+  .hline .resize.e,.hline .resize.w{
+    display: block;
   }
   .sline{
-    min-width: 1px;
+    max-width: 0px;
+    width: 0px!important;
     height: 200px;
-    background: #333;
-    border-left: 5px solid transparent!important; 
-    border-right: 5px solid transparent!important;
+    border: 0;
+    border-top-width: 0px!important;
+    border-left-width: 1px;
+    border-right-width: 0px!important;
+    border-bottom-width: 0px!important;   
+    border-style: solid;
+    border-color: #333;     
+  }  
+  .sline .resize{
+    display: none;
+  }
+  .sline .resize.n,.sline .resize.s{
+    display: block;
+  }
+  .sline .resizeBox{
+    padding: 0 5px;
+    margin-left: -6px;
+    box-sizing: content-box;
+  }
+  .sline .supendTools,.hline .supendTools{
+    display: none!important;
   }
 /*-----------课程分类---------------*/
 	.addcoursetype{
@@ -2137,82 +2172,130 @@
   }
   /*图片形状*/
   .square{
-    margin: 0 auto;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%);
     width: 118px;
     height: 118px;
     overflow: hidden;
   }
   .square img{
-    width: auto;
-    height: 100%;
-    margin-left: 50%;
-    transform:translateX(-50%) ;
-    -ms-transform:translateX(-50%);   /* IE 9 */
-    -moz-transform:translateX(-50%);  /* Firefox */
-    -webkit-transform:translateX(-50%); /* Safari 和 Chrome */
-    -o-transform:translateX(-50%);
+    width: auto!important;
+    height: auto;
+    margin: 50% 0 0 50%;
+    transform:translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%);
+  }
+  .right .square img{
+    transform:translate(-50%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-50%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%) scale(1.1,1.1);
   }
   .right .square img:hover{   
-    transform:translateX(-45%) ;
-    -ms-transform:translateX(-45%);   /* IE 9 */
-    -moz-transform:translateX(-45%);  /* Firefox */
-    -webkit-transform:translateX(-45%); /* Safari 和 Chrome */
-    -o-transform:translateX(-45%);
+    transform:translate(-45%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-45%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-45%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-45%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-45%,-50%) scale(1.1,1.1);
+  }
+
+  .left .square img{
+    transform:translate(-50%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-50%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%) scale(1.1,1.1);
   }
   .left .square img:hover{   
-    transform:translateX(-55%) ;
-    -ms-transform:translateX(-55%);   /* IE 9 */
-    -moz-transform:translateX(-55%);  /* Firefox */
-    -webkit-transform:translateX(-55%); /* Safari 和 Chrome */
-    -o-transform:translateX(-55%);
+    transform:translate(-55%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-55%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-55%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-55%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-55%,-50%) scale(1.1,1.1);
   }
   .enlarge .square img:hover{
-    transform:translateX(-50%) scale(1.2,1.2);
-    -ms-transform:translateX(-50%) scale(1.2,1.2);   /* IE 9 */
-    -moz-transform:translateX(-50%) scale(1.2,1.2);  /* Firefox */
-    -webkit-transform:translateX(-50%) scale(1.2,1.2); /* Safari 和 Chrome */
-    -o-transform:translateX(-50%) scale(1.2,1.2);
+    transform:translate(-50%,-50%) scale(1.2,1.2);
+    -ms-transform:translate(-50%,-50%) scale(1.2,1.2);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%) scale(1.2,1.2);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%) scale(1.2,1.2); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%) scale(1.2,1.2);
   }  
   .fillet{
     border-radius: 15%;
+    transform: scale(1,1);
+    -ms-transform:scale(1,1);   /* IE 9 */
+    -moz-transform:scale(1,1);  /* Firefox */
+    -webkit-transform:scale(1,1); /* Safari 和 Chrome */
+    -o-transform:scale(1,1);
   }
   .round{
-    margin: 0 auto;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%);
     border-radius: 50%;   
     width: 118px;
     height: 118px;
     overflow: hidden;
   }
   .round img{
-    width: auto;
-    height: 100%;
-    margin-left: 50%;
-    transform:translateX(-50%) ;
-    -ms-transform:translateX(-50%);   /* IE 9 */
-    -moz-transform:translateX(-50%);  /* Firefox */
-    -webkit-transform:translateX(-50%); /* Safari 和 Chrome */
-    -o-transform:translateX(-50%);
+    width: auto!important;
+    height: auto;
+    margin: 50% 0 0 50%;
+    transform:translate(-50%,-50%) ;
+    -ms-transform:translate(-50%,-50%);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%);
+  }
+  .right .round img{
+    transform:translate(-50%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-50%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%) scale(1.1,1.1);
   }
   .right .round img:hover{   
-    transform:translateX(-45%) ;
-    -ms-transform:translateX(-45%);   /* IE 9 */
-    -moz-transform:translateX(-45%);  /* Firefox */
-    -webkit-transform:translateX(-45%); /* Safari 和 Chrome */
-    -o-transform:translateX(-45%);
+    transform:translate(-45%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-45%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-45%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-45%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-45%,-50%) scale(1.1,1.1);
+  }
+  .left .round img{
+    transform:translate(-50%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-50%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%) scale(1.1,1.1);
   }
   .left .round img:hover{   
-    transform:translateX(-55%) ;
-    -ms-transform:translateX(-55%);   /* IE 9 */
-    -moz-transform:translateX(-55%);  /* Firefox */
-    -webkit-transform:translateX(-55%); /* Safari 和 Chrome */
-    -o-transform:translateX(-55%);
+    transform:translate(-55%,-50%) scale(1.1,1.1);
+    -ms-transform:translate(-55%,-50%) scale(1.1,1.1);   /* IE 9 */
+    -moz-transform:translate(-55%,-50%) scale(1.1,1.1);  /* Firefox */
+    -webkit-transform:translate(-55%,-50%) scale(1.1,1.1); /* Safari 和 Chrome */
+    -o-transform:translate(-55%,-50%) scale(1.1,1.1);
   }
    .enlarge .round img:hover{
-    transform:translateX(-50%) scale(1.2,1.2);
-    -ms-transform:translateX(-50%) scale(1.2,1.2);   /* IE 9 */
-    -moz-transform:translateX(-50%) scale(1.2,1.2);  /* Firefox */
-    -webkit-transform:translateX(-50%) scale(1.2,1.2); /* Safari 和 Chrome */
-    -o-transform:translateX(-50%) scale(1.2,1.2);
+    transform:translate(-50%,-50%) scale(1.2,1.2);
+    -ms-transform:translate(-50%,-50%) scale(1.2,1.2);   /* IE 9 */
+    -moz-transform:translate(-50%,-50%) scale(1.2,1.2);  /* Firefox */
+    -webkit-transform:translate(-50%,-50%) scale(1.2,1.2); /* Safari 和 Chrome */
+    -o-transform:translate(-50%,-50%) scale(1.2,1.2);
   }  
   /* editbutton */
   .button_radius{
@@ -2235,7 +2318,7 @@
     background: linear-gradient(#A5D9A2, #4BB345); /* 标准的语法 */
     border-radius: 3px;
     box-shadow: 0 2px 5px 2px rgba(0,0,0,0.2);
-    border:none;
+    border-width: 0;
   }
   .button_gradients_border{
     background: -webkit-linear-gradient(#A5D9A2, #4BB345); /* Safari 5.1 - 6.0 */
@@ -2244,4 +2327,8 @@
     background: linear-gradient(#A5D9A2, #4BB345); /* 标准的语法 */
     border-radius: 3px;
     border:1px solid #4AB344;
+  }
+  /* 链接 */
+  .registerEvent,.getUserNameEvent,.loginEvent{
+    cursor: pointer;
   }
